--- a/index.html
+++ b/index.html
@@ -9,57 +9,56 @@
 </head>
 <body>
 
-    <nav class="sidebar"> <!-- this is the Sidebar -->
+    <nav class="navbar"> <!-- Updated class name -->
         <div class="logo-menu">
-            <h2 class="logo">Vksaikat</h2>
+            <h2 class="logo"></h2>
             <i class="bx bx-menu toggle-btn"></i>    
         </div>
-
-        <ul class="list">
-            <li class="list-item active">
+        <ul class="nav-list">
+            <li class="nav-item active">
                 <a href="#paragraph">
                     <i class='bx bxs-grid-alt'></i>
-                    <span class="link-name" style="--i:1">Dashboard</span>
+                    <span class="link-name">Dashboard</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#aboutme">
                     <i class='bx bxs-user'></i>
-                    <span class="link-name" style="--i:2">About Me</span>
+                    <span class="link-name">About Me</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#myskill">
                     <i class='bx bx-pie-chart-alt-2'></i>
-                    <span class="link-name" style="--i:3">My Skills</span>
+                    <span class="link-name">My Skills</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#myprojects">
                     <i class='bx bx-folder'></i>
-                    <span class="link-name" style="--i:4">My Projects</span>
+                    <span class="link-name">My Projects</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#hireme">
-                    <i class='bx bx-cart' ></i>
-                    <span class="link-name" style="--i:5">Hire Me</span>
+                    <i class='bx bx-cart'></i>
+                    <span class="link-name">Hire Me</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#message">
                     <i class='bx bxs-chat'></i>
-                    <span class="link-name" style="--i:6">Message</span>
+                    <span class="link-name">Message</span>
                 </a>
             </li>
-            <li class="list-item">
+            <li class="nav-item">
                 <a href="#rate-me">
-                    <i class='bx bx-heart' ></i>
-                    <span class="link-name" style="--i:7">Rate me</span>
+                    <i class='bx bx-heart'></i>
+                    <span class="link-name">Rate Me</span>
                 </a>
             </li>
         </ul>
-    </nav>  <!-- End of the Navbar -->
+    </nav> <!-- End of the Navbar -->
 
 <div class="wrapper">
         <!-- This is the main page of the portfolio -->
@@ -206,4 +205,3 @@
 
 </body>
 </html>
-
