--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 
     <div class="container-3">
         <form action="" id="mydetails">
-           <h4><span class="highlighted-2">D.O.B </span>: 18/08/2004</h4><br>
-           <h4><span class="highlighted-2">Education </span>: B.Sc in Computer Science & Data Analytics from <span class="highlighted">IIT Patna</span> (2024-'27)</h4><br>
+           <h4><span class="highlighted-2">Education </span>: B.S in Computer Science & Data Analytics from <span class="highlighted">IIT Patna</span> (2024-'28)</h4><br>
            <h4>B.tech in Information Technology from <span class="highlighted">HIT Haldia</span> (2024-'28)</h4>
         </form>
     </div>
