--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h1 class="highlighted">Hire Me</h1>
         <ul>
             <li><a href="mailto:saikattunga56789@gmail.com"><i class='bx bx-envelope'></i> Email</a></li>
-            <li><a href="tel:+91 8967961627"><i class='bx bx-phone'></i> Phone</a></li>
+            <li><a href="tel:+91"><i class='bx bx-phone'></i> Phone</a></li>
             <li><a href="https://github.com/saikatwebdev" target="_blank"><i class='bx bxl-github'></i> GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/saikattunga" target="_blank"><i class='bx bxl-linkedin'></i> LinkedIn</a></li>
         </ul>
