--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container-3">
         <form action="" id="mydetails">
            <h4><span class="highlighted-2">Education </span>: B.S in Computer Science & Data Analytics from <span class="highlighted">IIT Patna</span> (2024-'28)</h4><br>
-           <h4>B.tech ECE from <span class="highlighted">ALIPURDUAR GOVERNMENT ENGINEERING AND MANAGEMENT COLLEGE</span> (2024-'28)</h4>
+           <h4>B.tech AI from <span class="highlighted">ALIPURDUAR GOVERNMENT ENGINEERING AND MANAGEMENT COLLEGE</span> (2024-'28)</h4>
         </form>
     </div>
 
