--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
             </div>
 
             <div class="container-4-2">
+                <!-- so I'm going to update this part with my gained skills in library and framewords-->
+                <h2 class="highlighted">Frameworks & Library :</h2><br>
+                <h3>Tailwind CSS , Bootstrap , React.js </h3> <br>
                 <h2 class="highlighted">Other Skills :</h2> <br>    
                 <h3>Basics of Programming languages like <span class="highlighted-2">C</span>, <span class="highlighted-2">Python</span>.<br> <br>
                     <span class="highlighted">Soft Skills: </span><br><br>Public Speaking, Leadership, Teamwork.
