my profile photo added and also added existing projects

--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
         <!-- This is the main page of the portfolio -->
     <div class="container">
         <div class="paragraph" id="paragraph">
-            <span class="content-para">Hi, I'm <span class="highlighted">Saikat Tunga.</span></span>
+            <span class="content-para">Hi, I'm <span class="highlighted">Saikat Tunga.</span>
+            <br>
+            <span class="highlighted">FRONT-END DEVELOPER..</span>
+            </span>
         </div>
-
         <div class="image">
-         <!-- This is to be filled with a 3D object animation -->
+            <img src="portfolio_img.jpg"  id="profile_img">
         </div>
     </div>
 
@@ -88,8 +90,9 @@
     <!-- About Me Section -->
     <div class="aboutme" id="aboutme">
         <h1 id="aboutmeheader">About Me</h1><br>
-        <h3 id="aboutme">Hello! I'm a passionate <span class="highlighted">front-end developer</span> with a flair for creating beautiful, responsive, and user-friendly websites. With 1 year of experience in the industry, I specialize in turning ideas into visually appealing and functional digital experiences.</h3>
-    </div>
+        <h3 id="aboutme">
+        I’m a passionate <span class="highlighted-2">Front-End Developer</span> with a strong foundation in HTML, CSS, and JavaScript. I have experience working with modern CSS frameworks like Bootstrap and Tailwind CSS, which allow me to create responsive and visually appealing designs. My journey into React.js has given me the ability to build dynamic and interactive web applications. Currently, I am diving into backend development with Django to expand my skill set and become a well-rounded developer. I’m excited to bring creativity and functionality together to craft seamless digital experiences!
+        </h3>
 
     <!-- My Skills Section -->
     <div class="container-4" id="myskill"> 
@@ -133,7 +136,7 @@
             <div class="container-4-2">
                 <!-- so I'm going to update this part with my gained skills in library and framewords-->
                 <h2 class="highlighted">Frameworks & Library :</h2><br>
-                <h3>Tailwind CSS , Bootstrap , React.js </h3> <br>
+                <h3>Tailwind CSS , Bootstrap , React.js , Django </h3> <br>
                 <h2 class="highlighted">Other Skills :</h2> <br>    
                 <h3>Basics of Programming languages like <span class="highlighted-2">C</span>, <span class="highlighted-2">Python</span>.<br> <br>
                     <span class="highlighted">Soft Skills: </span><br><br>Public Speaking, Leadership, Teamwork.
@@ -159,15 +162,35 @@
         </div>
         <br>
     <div class="myproject" >
-        <div class="project-1">
+        <div class="projects">
+            <a href="https://saikatwebdev.github.io/paymentpage/" target="_blank">
+                <img src="payment page ht.jpg" alt="Payment Page" title="Payment Page" class="project-img">
+            </a>
+                <p>PAYMENT PAGE</p>
+                <small>HTML , CSS ,  ANIMATIONS</small>
+        </div>
+        <div class="projects">
             <a href="https://saikatwebdev.github.io/Tic-Tac-Toe-Game/" target="_blank">
                 <img src="prject.jpg" alt="Tic Tac Toe Game" title="Tic Tac Toe Game" class="project-img">
             </a>
+            <div class="project-text">
+                <p>TIC TOE GAME</p>
+                <small>HTML , CSS , JAVASCRIPT</small>
+            </div>
         </div>
-        <div class="project-2">
+        <div class="projects">
             <a href="https://saikatwebdev.github.io/book-mart/" target="_blank">
                 <img src="Screenshot 2024-08-03 023536.jpg" alt="Book Mart" title="Book Mart" class="project-img">
             </a>
+                <p>BOOK MART</p>
+                <small>HTML , CSS , JAVASCRIPT</small>
+        </div>
+        <div class="projects">
+            <a href="https://saikatwebdev.github.io/weather-app/" target="_blank">
+                <img src="weather app.jpg" alt="Book Mart" title="Book Mart" class="project-img">
+            </a>
+                <p>WEATHER APP</p>
+                <small>HTML , CSS , JAVASCRIPT , API INTEGRATION</small>
         </div>
     </div>
      </div>
